<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fanzone</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_bets">My Bets</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="update_profile">Post News</string>
    <string name="post_video">Post Video</string>
    <string name="postphoto">PostPhoto</string>
    <string name="login_now">Login Now</string>
    <string name="register_now">Register Now</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login">Sign in</string>
    <string name="new_user">New user?</string>
    <string name="fanzone">Fanzone</string>
    <string name="online">Online</string>
    <string name="message">Message</string>
    <string name="txtNational">France</string>
    <string name="topup">Add funds</string>
    <string name="club">Club</string>
    <string name="counter">7 Comments</string>
    <string name="note">Kuna hii team inajiita asenal watamaliza namba tano</string>
    <string name="profile_pic">Profile</string>
    <string name="add_funds">Deposit</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions.]]></string>
    <string name="withdraw">Withdraw</string>
    <string name="search">Search Games</string>

</resources>
