<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 
    tools:context="ke.co.capiyo.fanzone.co.capiyo.fanzone.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/best"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="60sp" />


    <TextView
        android:layout_width="match_parent"
		android:text="@string/username"
        android:fontFamily="sans-serif"


        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/logUsername"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/logUsername"
        
        android:padding="5dp"
        android:textSize="25sp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:autofillHints="user@email.com" />
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif"
        
        android:text="@string/password"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:labelFor="@id/logPassword"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        
        android:id="@+id/logPassword"
        
        android:textSize="25sp"
        android:padding="5dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/new_user"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>
