<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="ke.co.capiyo.fanzone.co.capiyo.fanzone.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/best"
        android:textSize="60sp" />
    <!--    <ImageView-->
    <!--        android:layout_width="100dp"-->
    <!--    -->
    <!--        android:layout_marginStart="100dp"-->
    <!--        android:visibility="invisible"-->
    <!--        android:layout_height="100dp"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/regUsername"
        android:text="@string/username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="username"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/phoneEd"
        android:text="@string/phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phoneEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="2547xxxxxxxx"
        android:fontFamily="sans-serif"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/regPassword"
        android:text="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="sans-serif"
        android:labelFor="@id/regConpassword"
        android:text="@string/confirm_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regConpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password again"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        >
        <CheckBox
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/acceptTerms"
            />
        <TextView
            android:id="@+id/termsLink"
            android:textColor="@color/dorgerblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp" />


</LinearLayout>
