<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/chatRelative"
        android:layout_height="match_parent">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="20dp"
            app:civ_border_color="@color/crimson"
            app:civ_border_width="1dp"
            android:id="@+id/chatImage"
            android:src="@mipmap/iconia"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/chatusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <!--    <TextView-->
        <!--        android:id="@+id/usernam"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginStart="50dp"-->
        <!--        android:fontFamily="sans-serif-black"-->
        <!--        android:text="@string/app_name"-->
        <!--        android:textColor="@color/black"-->
        <!--        android:textSize="17sp" />-->

        <TextView
            android:id="@+id/chatclub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_below="@id/chatusername"
            android:text="@string/club"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/last_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatclub"
            android:layout_marginStart="50dp"
            android:fontFamily="sans-serif"
            android:text="Am a man united fan for life,,, nothing can separate me from man united come rain come sun shine❤️❤️💕🙌"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/chatnational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:textAlignment="textEnd"
            android:layout_marginEnd="60dp"
            android:text="@string/txtNational"
            android:layout_toEndOf="@id/chatclub"
            android:textSize="13sp" />



        <Button
            android:id="@+id/chatnotification"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:text="@string/message" />



    </RelativeLayout>
</androidx.cardview.widget.CardView>


